--- a/src/assets/.env
+++ b/src/assets/.env
@@ -1,3 +1,3 @@
 
 
-export REPLICATE_API_TOKEN=r8_17ldXasyJUYWKMSL5AdLUeDH3TpjhvM3OlzMw
+# export REPLICATE_API_TOKEN=r8_17ldXasyJUYWKMSL5AdLUeDH3TpjhvM3OlzMw
